Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
-  /* overflow-x: hidden; */
 }
 
 /* /////////////////////////////////////////////////////////////////// */
@@ -41,7 +39,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
 
   position: fixed;
   top: 0;
@@ -165,11 +162,15 @@
 /* /////////////////////////////////////////////////////////////////// */
 /* //////////////////      Body Start       //////////////////////// */
 
+body {
+  overflow-x: hidden;
+}
+
 .body-container {
   /* border: 1px solid red; */
   background-color: #293241;
 
-  opacity: 99%;
+  opacity: 0.99;
 
   width: 100vw;
   min-height: 100vh;
